--- a/style.css
+++ b/style.css
@@ -92,8 +92,8 @@ body {
 } 
 @media (max-width: 2560px) { html { font-size: 8px; } ; } 
 @media (max-width: 1920px) { html { font-size: 6px; } ; } 
-@media (max-width: 1440px) { html { font-size: 4px;}}
+@media (max-width: 1440px) { html { font-size: 4px;} ;  }
 @media (max-width: 1024px) { html { font-size: 3px; } ; }
 @media (max-width: 768px) { html { font-size: 2.5px; } ; } 
 @media (max-width: 430px) { html { font-size: 1.25px; } ; }  
-@media (max-width: 320px) { html { font-size: 1px; }
+@media (max-width: 320px) { html { font-size: 1px; } ; }
